--- a/src/repository/Repository.Write/Repository.Write.csproj
+++ b/src/repository/Repository.Write/Repository.Write.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Elastic.Clients.ElasticSearch" Version="9.2.1" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.10" />
     <ProjectReference Include="./../../domain/Domain.Write/Domain.Write.csproj" />
   </ItemGroup>
 
