--- a/src/host/Host.Read/Host.Read.csproj
+++ b/src/host/Host.Read/Host.Read.csproj
@@ -8,6 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
+    <PackageReference Include="Elastic.Clients.ElasticSearch" Version="9.2.1" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.10" />
+
     <ProjectReference Include="./../../service/Service.Read/Service.Read.csproj" />
     <ProjectReference Include="./../../repository/Repository.Read/Repository.Read.csproj" />
   </ItemGroup>
