--- a/src/host/Host.Read/Host.Read.csproj
+++ b/src/host/Host.Read/Host.Read.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -7,9 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
     <PackageReference Include="Elastic.Clients.ElasticSearch" Version="9.2.1" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.10" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="10.0.1" />
+    <ProjectReference Include="..\..\helper\Helper\Helper.csproj" />
 
     <ProjectReference Include="./../../service/Service.Read/Service.Read.csproj" />
     <ProjectReference Include="./../../repository/Repository.Read/Repository.Read.csproj" />
