[feat] pagination in base repository

--- a/src/repository/Repository.Read/Repository.Read.csproj
+++ b/src/repository/Repository.Read/Repository.Read.csproj
@@ -10,6 +10,7 @@
       <PackageReference Include="Elastic.Clients.ElasticSearch" Version="9.2.1" />
       <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.10" />
       <ProjectReference Include="..\..\helper\Helper\Helper.csproj" />
+      <ProjectReference Include="..\..\service\Service.Read\Service.Read.csproj" />
       <ProjectReference Include="./../../domain/Domain.Read/Domain.Read.csproj" />
     </ItemGroup>
 
