--- a/src/repository/Repository.Write/Repository.Write.csproj
+++ b/src/repository/Repository.Write/Repository.Write.csproj
@@ -7,8 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Elastic.Clients.ElasticSearch" Version="9.2.1" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" />
+    <PackageReference Include="Microsoft.Extensions.Options" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
     <ProjectReference Include="..\..\helper\Helper\Helper.csproj" />
     <ProjectReference Include="./../../domain/Domain.Write/Domain.Write.csproj" />
   </ItemGroup>
