--- a/src/host/Host.Write/Host.Write.csproj
+++ b/src/host/Host.Write/Host.Write.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -7,10 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Elastic.Clients.ElasticSearch" Version="9.2.1" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.10" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="10.0.1" />
-
+    <PackageReference Include="Microsoft.Extensions.Options" />
+    <PackageReference Include="Swashbuckle.AspNetCore" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" />
     <ProjectReference Include="./../../service/Service.Write/Service.Write.csproj" />
     <ProjectReference Include="./../../repository/Repository.Write/Repository.Write.csproj" />
   </ItemGroup>
