--- a/src/host/Host.Write/appsettings.Development.json
+++ b/src/host/Host.Write/appsettings.Development.json
@@ -5,11 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ElasticSearch":
-  {
+  "ElasticSearch": {
     "Url": "https://localhost:9200",
     "FingerPrint": "43:0B:E0:A1:FB:95:DC:46:F3:BA:11:10:DC:E3:1D:63:59:C8:88:6A:E3:39:4C:32:6D:B1:A8:1A:36:41:96:3D",
     "UserName": "elastic",
     "Password": "y8YzOqL9ADKQqYFnwcBP"
+  },
+  "ConnectionStrings": {
+    "WriteDb": "User ID=myuser;Password=mysecretpassword;Host=localhost;Port=5432;Database=customerclub;"
   }
 }
