--- a/src/service/Service.Read/Service.Read.csproj
+++ b/src/service/Service.Read/Service.Read.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentResults" Version="4.0.0" />
-    <PackageReference Include="MediatR" Version="13.1.0" />
+    <PackageReference Include="FluentResults" />
+    <PackageReference Include="MediatR" />
     <ProjectReference Include="..\..\helper\Helper\Helper.csproj" />
     <ProjectReference Include="./../../domain/Domain.Read/Domain.Read.csproj" />
   </ItemGroup>
