--- a/src/domain/Domain.Write/Domain.Write.csproj
+++ b/src/domain/Domain.Write/Domain.Write.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\helper\Helper\Helper.csproj" />
+  </ItemGroup>
+
 </Project>
