[chore] domain service - project name change

--- a/src/host/Host.Write/appsettings.Development.json
+++ b/src/host/Host.Write/appsettings.Development.json
@@ -12,6 +12,6 @@
     "Password": "y8YzOqL9ADKQqYFnwcBP"
   },
   "ConnectionStrings": {
-    "WriteDb": "User ID=myuser;Password=mysecretpassword;Host=localhost;Port=5432;Database=customerclub;"
+    "WriteDb": "User ID=myuser;Password=mysecretpassword;Host=localhost;Port=5432;Database=afterline-core;"
   }
 }
